# starlight_pc_player

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  env.cmake  resources.qrc
prebuild/lib/: EventBus.lib  readme.txt
src/: app_messages.cpp  app_messages.h  context.h  main.cpp  main_window.cpp  main_window.h  play_before_widget.cpp  play_before_widget.h  play_control_widget.cpp  play_control_widget.h  play_list_widget.cpp  play_list_widget.h  play_view.cpp  play_view.h  play_widget.cpp  play_widget.h  qdrag_widget.cpp  qdrag_widget.h  settings.cpp  settings.h
src/customize_io/: file_get_base.cpp  file_get_base.h  file_get_http.cpp  file_get_http.h  file_get_http_impl.cpp  file_get_http_impl.h  file_get_local.cpp  file_get_local.h
src/data_base/: data_base.cpp  data_base.h
src/draw_board/: CDrawBoardWidget.cpp  CDrawBoardWidget.h  CMakeLists.txt  DrawWidget.cpp  DrawWidget.h  systemdata.cpp  systemdata.h
src/draw_board/shape/: content_edit.cpp  content_edit.h  custom_line.cpp  custom_line.h  demensionsdata.cpp  ellipsedata.cpp  erasuredata.cpp  linedata.cpp  rectangledata.cpp  shapedata.cpp  shapedata.h  text_shape.cpp  text_shape.h  textdata.cpp  triangeledata.cpp  triangeledata.h
src/media_operation/: image_container.cpp  image_container.h  image_panel.cpp  image_panel.h  image_toolbar.cpp  image_toolbar.h  image_view.cpp  image_view.h  media_operation.cpp  media_operation.h
src/public/: base_page.cpp  base_page.h  yk_button.cpp  yk_button.h  yk_icon_button.cpp  yk_icon_button.h  yk_line_edit.cpp  yk_line_edit.h  yk_style_sheet.h
src/vlc_wrapper/: vlc_player.cpp  vlc_player.h
src/widget/: bg_page.cpp  bg_page.h  play_before_widget.cpp  play_before_widget.h  play_control_widget.cpp  play_control_widget.h  play_list_widget.cpp  play_list_widget.h  play_view.cpp  play_view.h  play_widget.cpp  play_widget.h  qdrag_widget.cpp  qdrag_widget.h
src/widget/play_list/: list_func_page.cpp  list_func_page.h  list_widget.cpp  list_widget.h  media_list_widget.cpp  media_list_widget.h
src/widget/popup_widget/: popup_widget.cpp  popup_widget.h
unit_test/: test_01.cpp
